--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider:
   dots_indicator:
+  provider:
+  http:
 
 dev_dependencies:
   flutter_test:
